--- a/.github/workflows/buddy-bot.yml
+++ b/.github/workflows/buddy-bot.yml
@@ -62,7 +62,7 @@ env:
   # Create a PAT at: https://github.com/settings/tokens
   # Add it as a repository secret named 'BUDDY_BOT_TOKEN'
   # If BUDDY_BOT_TOKEN is not available, falls back to GITHUB_TOKEN (limited permissions)
-  GITHUB_TOKEN: ${{ secrets.BUDDY_BOT_TOKEN || secrets.GITHUB_TOKEN }}
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   BUDDY_BOT_TOKEN: ${{ secrets.BUDDY_BOT_TOKEN }}
 
 permissions:
@@ -121,14 +121,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          token: ${{ secrets.BUDDY_BOT_TOKEN || secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           fetch-depth: 0 # Fetch full history for rebasing
           persist-credentials: true
 
       - name: Setup Bun
         uses: oven-sh/setup-bun@v2
-        with:
-          bun-version: latest
 
       - name: Setup PHP and Composer (if needed)
         if: ${{ hashFiles('composer.json') != '' }}
@@ -160,14 +158,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          token: ${{ secrets.BUDDY_BOT_TOKEN || secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           fetch-depth: 0
           persist-credentials: true
 
       - name: Setup Bun
         uses: oven-sh/setup-bun@v2
-        with:
-          bun-version: latest
 
       - name: Install dependencies
         run: bun install
@@ -211,7 +207,7 @@ jobs:
           fi
 
         env:
-          GITHUB_TOKEN: ${{ secrets.BUDDY_BOT_TOKEN || secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BUDDY_BOT_TOKEN: ${{ secrets.BUDDY_BOT_TOKEN }}
 
       - name: Create check summary
@@ -231,7 +227,7 @@ jobs:
           fi
 
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "📋 View detailed logs above for check results (rebase requests and auto-closing)." >> $GITHUB_STEP_SUMMARY
+          echo "📋 View detailed logs above for check results (rebase requests, auto-closing, and branch cleanup)." >> $GITHUB_STEP_SUMMARY
 
   # Dependency update job
   dependency-update:
@@ -243,14 +239,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          token: ${{ secrets.BUDDY_BOT_TOKEN || secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           fetch-depth: 0
           persist-credentials: true
 
       - name: Setup Bun
         uses: oven-sh/setup-bun@v2
-        with:
-          bun-version: latest
 
       - name: Setup PHP and Composer (if needed)
         if: ${{ hashFiles('composer.json') != '' }}
@@ -311,7 +305,7 @@ jobs:
           fi
 
         env:
-          GITHUB_TOKEN: ${{ secrets.BUDDY_BOT_TOKEN || secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BUDDY_BOT_TOKEN: ${{ secrets.BUDDY_BOT_TOKEN }}
 
       - name: Dry run notification
@@ -354,12 +348,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          token: ${{ secrets.BUDDY_BOT_TOKEN || secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Setup Bun
         uses: oven-sh/setup-bun@v2
-        with:
-          bun-version: latest
 
       - name: Install dependencies
         run: bun install
@@ -375,6 +367,31 @@ jobs:
           echo "Triggered by: ${{ github.event_name }}"
           echo "Repository: ${{ github.repository }}"
           echo "Branch: ${{ github.ref_name }}"
+
+      - name: Pre-flight dashboard check
+        if: ${{ github.event.inputs.dry_run != 'true' }}
+        run: |
+          echo "🔍 Pre-flight check: Looking for existing dashboard issues..."
+
+          # Check for existing dashboard issues to prevent duplicates
+          if command -v gh &> /dev/null; then
+            EXISTING_DASHBOARDS=$(gh issue list --label "dashboard,dependencies" --state open --json number,title,url --jq length 2>/dev/null || echo "0")
+            echo "Found $EXISTING_DASHBOARDS existing dashboard issue(s)"
+
+            if [ "$EXISTING_DASHBOARDS" -gt 1 ]; then
+              echo "⚠️ WARNING: Multiple dashboard issues detected!"
+              gh issue list --label "dashboard,dependencies" --state open --json number,title,url --jq '.[] | "  - #\(.number): \(.title) - \(.url)"' 2>/dev/null || true
+              echo ""
+              echo "🔧 Buddy Bot will attempt to update the most recent one and may close duplicates"
+            elif [ "$EXISTING_DASHBOARDS" -eq 1 ]; then
+              DASHBOARD_INFO=$(gh issue list --label "dashboard,dependencies" --state open --json number,title,url --jq '.[0] | "#\(.number): \(.title) - \(.url)"' 2>/dev/null || echo "Found 1 dashboard")
+              echo "✅ Found existing dashboard: $DASHBOARD_INFO"
+            else
+              echo "ℹ️ No existing dashboard found - a new one will be created"
+            fi
+          else
+            echo "⚠️ GitHub CLI not available - cannot perform pre-flight check"
+          fi
 
       - name: Update Dependency Dashboard
         run: |
@@ -396,10 +413,6 @@ jobs:
 
           # Build the command
           COMMAND="bunx buddy-bot dashboard"
-
-          if [ "$PIN" = "true" ]; then
-            COMMAND="$COMMAND --pin"
-          fi
 
           if [ "$TITLE" != "" ]; then
             COMMAND="$COMMAND --title \"$TITLE\""
@@ -434,7 +447,7 @@ jobs:
           fi
 
         env:
-          GITHUB_TOKEN: ${{ secrets.BUDDY_BOT_TOKEN || secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BUDDY_BOT_TOKEN: ${{ secrets.BUDDY_BOT_TOKEN }}
 
       - name: Dry run notification
