--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bun-query-builder",
   "type": "module",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "A simple yet performant query builder for TypeScript. Built with Bun.",
   "author": "Chris Breuer <chris@stacksjs.org>",
   "license": "MIT",
@@ -13,7 +13,12 @@
   "bugs": {
     "url": "https://github.com/stacksjs/bun-query-builder/issues"
   },
-  "keywords": ["typescript", "query-builder", "bun", "package"],
+  "keywords": [
+    "typescript",
+    "query-builder",
+    "bun",
+    "package"
+  ],
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
@@ -30,7 +35,10 @@
     "qbx": "./dist/bin/cli.js",
     "qb": "./dist/bin/cli.js"
   },
-  "files": ["README.md", "dist"],
+  "files": [
+    "README.md",
+    "dist"
+  ],
   "scripts": {
     "build": "bun --bun build.ts && bun run compile",
     "compile": "bun build ./bin/cli.ts --compile --minify --outfile bin/query-builder",
