--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -122,7 +122,7 @@ jobs:
         uses: oven-sh/setup-bun@v2
 
       - name: Use cached node_modules
-        uses: actions/cache@v4
+        uses: actions/cache@v4.2.4
         with:
           path: node_modules
           key: node-modules-${{ hashFiles('**/bun.lock') }}
@@ -134,3 +134,6 @@ jobs:
 
       - name: Build
         run: bun run build
+
+      - name: Publish Commit
+        run: bunx pkg-pr-new publish
