--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,10 +67,10 @@ jobs:
       mysql:
         image: mysql:8.0
         env:
-          MYSQL_ROOT_PASSWORD: ''
+          MYSQL_ROOT_PASSWORD: root
           MYSQL_DATABASE: test_db
         options: >-
-          --health-cmd="mysqladmin ping"
+          --health-cmd="mysqladmin ping -u root -proot"
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
@@ -78,11 +78,11 @@ jobs:
           - 3306:3306
 
     env:
-      DATABASE_URL: mysql://root:@localhost:3306/test_db
+      DATABASE_URL: mysql://root:root@localhost:3306/test_db
       MYSQL_HOST: localhost
       MYSQL_PORT: 3306
       MYSQL_USER: root
-      MYSQL_PASSWORD: ''
+      MYSQL_PASSWORD: root
       MYSQL_DATABASE: test_db
 
     steps:
@@ -105,7 +105,7 @@ jobs:
       - name: Wait for MySQL
         run: |
           echo "Waiting for MySQL to be ready..."
-          timeout 60 bash -c 'until mysqladmin ping -h localhost -P 3306 -u root; do sleep 1; done'
+          timeout 60 bash -c 'until mysqladmin ping -h localhost -P 3306 -u root -proot; do sleep 1; done'
           echo "MySQL is ready!"
 
       - name: Unit Test
