--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,11 +69,6 @@ jobs:
         env:
           MYSQL_ROOT_PASSWORD: root
           MYSQL_DATABASE: test_db
-        options: >-
-          --health-cmd="mysqladmin ping -u root -proot"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
         ports:
           - 3306:3306
 
@@ -105,7 +100,7 @@ jobs:
       - name: Wait for MySQL
         run: |
           echo "Waiting for MySQL to be ready..."
-          timeout 60 bash -c 'until mysqladmin ping -h localhost -P 3306 -u root -proot; do sleep 1; done'
+          timeout 60 bash -c 'until mysqladmin ping -h 127.0.0.1 -P 3306 -u root -proot; do sleep 1; done'
           echo "MySQL is ready!"
 
       - name: Unit Test
