--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,18 @@
     "target": "esnext",
     "lib": ["esnext"],
     "moduleDetection": "force",
+    "baseUrl": ".",
     "module": "esnext",
     "moduleResolution": "bundler",
+    "paths": {
+      "@/*": ["./src/*"],
+      "@/actions/*": ["./src/actions/*"],
+      "@/types": ["./src/types"],
+      "@/config": ["./src/config"],
+      "@/db": ["./src/db"],
+      "@/client": ["./src/client"],
+      "@/examples/*": ["./examples/*"]
+    },
     "resolveJsonModule": true,
     "types": ["bun"],
     "allowImportingTsExtensions": true,
