--- a/package.json
+++ b/package.json
@@ -70,8 +70,8 @@
     "typecheck": "bun --bun tsc --noEmit"
   },
   "dependencies": {
-    "@stacksjs/launchpad": "^0.6.4"
-
+    "@stacksjs/launchpad": "^0.6.4",
+    "@stacksjs/ts-validation": "^0.4.5"
   },
   "devDependencies": {
     "@stacksjs/bumpx": "^0.1.69",
