--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,5 +30,10 @@
     "verbatimModuleSyntax": true,
     "skipDefaultLibCheck": true,
     "skipLibCheck": true
-  }
+  },
+  "exclude": [
+    "node_modules",
+    "**/node_modules",
+    "node_modules/@stacksjs/ts-validation"
+  ]
 }
