--- a/package.json
+++ b/package.json
@@ -67,11 +67,11 @@
     "dev:docs": "bun --bun vitepress dev docs",
     "build:docs": "bun --bun vitepress build docs",
     "preview:docs": "bun --bun vitepress preview docs",
-    "typecheck": "bun --bun tsc --project tsconfig.typecheck.json"
+    "typecheck": "bun --bun tsc"
   },
   "dependencies": {
     "@stacksjs/launchpad": "^0.6.4",
-    "@stacksjs/ts-validation": "^0.4.5"
+    "@stacksjs/ts-validation": "^0.4.7"
   },
   "devDependencies": {
     "@stacksjs/bumpx": "^0.1.69",
