--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,6 @@ generated/
 .vscode
 bin/query-builder
 packages/bun-query-builder/bin/query-builder
+/packages/bun-query-builder/sql
+packages/benchmark/benchmark.db-shm
+packages/benchmark/benchmark.db-wal
