--- a/.gitignore
+++ b/.gitignore
@@ -11,12 +11,12 @@ node_modules
 temp
 docs/.vitepress/cache
 ./bin/qb
-./bin/query-builder
+./bin/qbx
 examples/models/.qb-migrations.postgres.json
 generated/
 .vscode
-bin/query-builder
-packages/bun-query-builder/bin/query-builder
+bin/qbx
+packages/bun-query-builder/bin/qbx
 /packages/bun-query-builder/sql
 packages/benchmark/benchmark.db-shm
 packages/benchmark/benchmark.db-wal
