--- a/package.json
+++ b/package.json
@@ -68,6 +68,9 @@
     "preview:docs": "bun --bun vitepress preview docs",
     "typecheck": "bun --bun tsc"
   },
+  "dependencies": {
+    "@stacksjs/ts-validation": "^0.4.7"
+  },
   "devDependencies": {
     "@stacksjs/bumpx": "^0.1.86",
     "@stacksjs/docs": "^0.70.23",
@@ -75,7 +78,7 @@
     "@stacksjs/gitlint": "^0.1.5",
     "@stacksjs/launchpad": "^0.6.4",
     "@stacksjs/logsmith": "^0.1.18",
-    "@types/bun": "^1.2.23",
+    "@types/bun": "^1.3.0",
     "buddy-bot": "^0.9.8",
     "bun-git-hooks": "^0.2.19",
     "bun-plugin-dtsx": "0.9.5",
@@ -84,14 +87,6 @@
   },
   "overrides": {
     "unconfig": "0.3.10"
-  },
-  "git-hooks": {
-    "pre-commit": {
-      "staged-lint": {
-        "*.{js,ts,json,yaml,yml,md}": "bunx --bun eslint --fix"
-      }
-    },
-    "commit-msg": "bunx gitlint --edit .git/COMMIT_EDITMSG"
   },
   "workspaces": [
     "packages/*"
