--- a/packages/bun-query-builder/package.json
+++ b/packages/bun-query-builder/package.json
@@ -69,6 +69,7 @@
     "typecheck": "bun --bun tsc"
   },
   "dependencies": {
+    "@stacksjs/clapp": "^0.2.0",
     "@stacksjs/ts-validation": "^0.4.7",
     "ts-mocker": "^0.1.5"
   },
