--- a/package.json
+++ b/package.json
@@ -69,8 +69,7 @@
     "typecheck": "bun --bun tsc"
   },
   "dependencies": {
-    "@stacksjs/ts-validation": "^0.4.7",
-    "bunfig": "^0.15.2"
+    "@stacksjs/ts-validation": "^0.4.7"
   },
   "devDependencies": {
     "@stacksjs/bumpx": "^0.2.2",
