--- a/package.json
+++ b/package.json
@@ -72,17 +72,10 @@
     "@stacksjs/ts-validation": "^0.4.7"
   },
   "devDependencies": {
-    "@stacksjs/bumpx": "^0.2.2",
     "@stacksjs/docs": "^0.70.23",
     "@stacksjs/eslint-config": "^4.14.0-beta.3",
-    "@stacksjs/gitlint": "^0.1.5",
     "@stacksjs/launchpad": "^0.6.4",
-    "@stacksjs/logsmith": "^0.2.1",
-    "@types/bun": "^1.3.1",
-    "buddy-bot": "^0.9.9",
-    "bun-git-hooks": "^0.3.1",
-    "bun-plugin-dtsx": "^0.21.16",
-    "typescript": "^5.9.3"
+    "better-dx": "^0.2.3"
   },
   "overrides": {
     "unconfig": "0.3.10"
