--- a/packages/bun-query-builder/package.json
+++ b/packages/bun-query-builder/package.json
@@ -21,10 +21,12 @@
   ],
   "exports": {
     ".": {
+      "bun": "./src/index.ts",
       "types": "./dist/index.d.ts",
       "import": "./dist/index.js"
     },
     "./*": {
+      "bun": "./src/*",
       "import": "./dist/*"
     }
   },
