--- a/packages/bun-query-builder/package.json
+++ b/packages/bun-query-builder/package.json
@@ -78,7 +78,7 @@
   "dependencies": {
     "@stacksjs/clapp": "^0.2.0",
     "@stacksjs/ts-validation": "^0.4.8",
-    "dynamodb-tooling": "file:../../../dynamodb-tooling",
+    "dynamodb-tooling": "^0.3.2",
     "ts-mocker": "^0.1.5"
   },
   "devDependencies": {
