--- a/packages/bun-query-builder/package.json
+++ b/packages/bun-query-builder/package.json
@@ -25,6 +25,11 @@
       "types": "./dist/index.d.ts",
       "import": "./dist/index.js"
     },
+    "./browser": {
+      "bun": "./src/browser.ts",
+      "types": "./dist/browser.d.ts",
+      "import": "./dist/browser.js"
+    },
     "./dynamodb": {
       "bun": "./src/dynamodb/index.ts",
       "types": "./dist/dynamodb/index.d.ts",
